2001-12-15  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-eval-requoted): Add \r to avoid additional quoting
	during edit.  Reported by Santiago Vila.

2001-12-06  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Install config.rpath in the directory specified
	through AC_CONFIG_AUX_DIR, not necessarily in the toplevel dir.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Also copy config.rpath, and recommend to copy
	lib-ld.m4, lib-link.m4, lib-prefix.m4.

2001-11-25  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-guess-archive-name): Verify that versions provided by
	file name and by Project-Id-Version field match.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: New option --intl.
	(intldir): New variable.
	Don't populate intl subdirectory if --intl is omitted.

2001-11-19  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-ediff-quit): New function.
	(ediff-keymap-setup-hook): Assign key binding for 'po-ediff-quit'.
	(po-ediff-buffers-exit-recursive): New function, in part derived
	from 'po-subedit-ediff'.
	(po-subedit-ediff): Use it.

	* po-mode.el (po-subedit-ediff): Use meaningful buffer names,
	derived from 'marker-regex'.
	Cleanup: Follow docstring conventions.

2001-11-19  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-map): Enable key binding for
	'po-edit-comment-and-ediff' ('C-c C-c' and 'C-c C-#').

2001-11-18  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-help-display-string): Adjust it.

2001-11-18  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-team-name-to-code): Fix syntax for the last entry
	(Zulu).

2001-11-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-subedit-ediff): New function.
	(po-edit-comment-and-ediff): New function.
	(po-edit-msgstr-and-ediff): New function.
	(po-subedit-mode-menu-layout): Add 'po-subedit-ediff'.
	(po-subedit-mode-map): Add key binding for 'po-subedit-ediff'.
	(po-mode-menu-layout): Add 'po-edit-comment-and-ediff' and
	'po-edit-msgstr-and-ediff'.