@@ -1,3 +1,7 @@
+2002-01-03  Bruno Haible  <bruno@clisp.org>
+
+	* gettextize.in: Recommend installation of gettext.h.
+
 2001-12-15  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-eval-requoted): Add \r to avoid additional quoting
